// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<span
  className="badge"
>
  simple
</span>
`;

exports[`should match snapshot with bold 1`] = `
<span
  className="badge badge--bold"
>
  bold
</span>
`;
